--- a/consulta.html
+++ b/consulta.html
@@ -29,7 +29,7 @@
 
         <nav class="navbar">
             <div class="testWve">
-                <a href="intro.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="consulta.html" class="active">Consulta Online</a>
                 <a href="paimelcontrole.html">Painel Controle</a>
             </div>
