--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <nav class="navbar">
             <div class="testWve">
-                <a href="intro.html" class="active">Home</a>
+                <a href="index.html" class="active">Home</a>
                 <a href="consulta.html">Consulta Online</a>
                 <a href="paimelcontrole.html">Painel Controle</a>
             </div>
